<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AdditionActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/main.toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_gravity="top"
        android:background="@color/purple_500"
        app:contentInsetStart="0dp"
        app:layout_collapseMode="pin">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="left|center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/addition_text"
                android:textColor="@color/white"
                android:textSize="20dp" />

            <ImageView
                android:id="@+id/backToMainBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:src="@drawable/back_btn_img"
                app:tint="@color/white" />

        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/add_sum_text"
        android:textColor="@color/black"
        android:textSize="24dp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/numTextInput"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/entering_num_text"
        app:startIconDrawable="@drawable/num_img">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>


    <CheckBox
        android:layout_marginTop="20dp"
        android:id="@+id/checkBoxIncome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:buttonTint="@color/purple_500"
        android:text="@string/income_text"
        android:textColor="@color/purple_500" />


    <CheckBox
        android:id="@+id/checkBoxExpense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:buttonTint="@color/red"
        android:text="@string/expense_text"
        android:textColor="@color/red" />


    <TextView
        android:id="@+id/description_for_expense_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:letterSpacing=".1"
        android:text="@string/add_category_text"
        android:textColor="@color/black"
        android:textSize="20dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/categoryTextInput"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/entering_category_text"
        app:startIconDrawable="@drawable/num_img">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_upload"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:elevation="4dp"
        android:text="@string/upload_btn_text"
        android:transitionName="text_sign_up"
        app:backgroundTint="@color/purple_500"
        app:cornerRadius="8dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:elevation="4dp"
        android:text="@string/cancel_btn_text"
        android:transitionName="text_sign_up"
        app:backgroundTint="@color/red"
        app:cornerRadius="8dp" />


</LinearLayout>